@@ -1,3 +1,8 @@
+2010-05-25  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* AddFileDialogHandler.cs:
+	* SelectFileDialogHandler.cs: Track api changes.
+
 2010-05-17  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* WindowsPlatform.cs: Fixed Bug 606364 - Cannot execute
